--- a/notebook/preprocessing.ipynb
+++ b/notebook/preprocessing.ipynb
@@ -490,6 +490,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Drop unnecessary columns: 'image' and 'link'"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -497,7 +504,6 @@
       },
       "outputs": [],
       "source": [
-        "# df.drop(columns=[\"Unnamed: 0\", \"image\", \"link\"], inplace=True)\n",
         "df.drop(columns=[\"image\", \"link\"], inplace=True)"
       ]
     },
@@ -570,6 +576,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Remove rows with missing values in specific columns"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -612,6 +625,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Convert 'ratings' & 'no_of_ratings' column to numeric (float)"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -619,8 +639,26 @@
       },
       "outputs": [],
       "source": [
-        "## change type of ratings into float\n",
         "df['ratings'] = pd.to_numeric(df['ratings'], errors='coerce')  # Convert to float"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Z0v-AURc4-YG"
+      },
+      "outputs": [],
+      "source": [
+        "# Clean 'no_of_ratings' by removing commas and converting to numeric\n",
+        "df['no_of_ratings'] = pd.to_numeric(df['no_of_ratings'].str.replace(',', ''), errors='coerce')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Convert 'discount_price' and 'actual_price' to numeric (int)"
       ]
     },
     {
@@ -643,17 +681,6 @@
       "outputs": [],
       "source": [
         "df['actual_price'] = pd.to_numeric(df['actual_price'].str.replace(r'\\D', '', regex=True), errors='coerce')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Z0v-AURc4-YG"
-      },
-      "outputs": [],
-      "source": [
-        "df['no_of_ratings'] = pd.to_numeric(df['no_of_ratings'].str.replace(',', ''), errors='coerce')"
       ]
     },
     {
@@ -748,6 +775,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Fill missing values in 'ratings' and 'no_of_ratings' columns with the median value"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -806,6 +840,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Drop any remaining unnecessary column 'Unnamed: 0' (if present)"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -838,6 +879,13 @@
       ],
       "source": [
         "print(f\"Total duplicates: {df.duplicated().sum()}\") ##Gapapa karna pas dah diliat textnya beda2 tp mungkin angkanya ada yg sama"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Standardize and clean text columns"
       ]
     },
     {
@@ -1537,6 +1585,13 @@
       ],
       "source": [
         "df.head()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Save cleaned DataFrame to CSV"
       ]
     },
     {
