--- a/notebook/preprocessing.ipynb
+++ b/notebook/preprocessing.ipynb
@@ -843,7 +843,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Drop any remaining unnecessary column 'Unnamed: 0' (if present)"
+        "### Drop any remaining unnecessary column 'Unnamed: 0'"
       ]
     },
     {
@@ -854,7 +854,6 @@
       },
       "outputs": [],
       "source": [
-        "# df.drop(columns=[\"Unnamed: 0\", \"image\", \"link\"], inplace=True)\n",
         "df.drop(columns=[\"Unnamed: 0\"], inplace=True)"
       ]
     },
@@ -878,7 +877,7 @@
         }
       ],
       "source": [
-        "print(f\"Total duplicates: {df.duplicated().sum()}\") ##Gapapa karna pas dah diliat textnya beda2 tp mungkin angkanya ada yg sama"
+        "print(f\"Total duplicates: {df.duplicated().sum()}\") "
       ]
     },
     {
