update code: testing

--- a/notebook/testing.ipynb
+++ b/notebook/testing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f62d512c",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "681844c3",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "ac182323",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "b918a017",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "922933ee",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "141f4cbc",
    "metadata": {},
    "outputs": [],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "55c87a05",
    "metadata": {},
    "outputs": [],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "fffbeb66",
    "metadata": {},
    "outputs": [],
@@ -285,6 +285,7 @@
     "    prompt = (\n",
     "        \"Summarize these product recommendations in a friendly tone. \"\n",
     "        \"Ensure each product includes its name, price (in ₹), and ratings. \"\n",
+    "        \"Show the product in a point list.\"\n",
     "        \"Do not omit any information:\\n\"\n",
     "        f\"{product_info}\"\n",
     "    )\n",
@@ -302,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "54017af8",
    "metadata": {},
    "outputs": [
@@ -311,12 +312,12 @@
      "output_type": "stream",
      "text": [
       "📘 Summary:\n",
-      " Stay cool this summer with these portable air conditioning options:\n",
-      "1. Trends Alert Mini Air Conditioner Portable Air Cooler (Price: ₹2999, Rating: 1.0⭐)\n",
-      "2. Go Arctic Air Portable 3 in 1 Conditioner Humidifier Purifier (Price: ₹1899, Rating: 1.0⭐)\n",
-      "3. Haier 1.5 Ton 3 Star Inverter Split Air Conditioner (Price: ₹69500, Rating: 1.0⭐)\n",
-      "4. Derike Portable Mini AC USB Battery Operated Air Conditioner (Price: ₹999, Rating: 1.0⭐)\n",
-      "5. Domact Mini AC USB Battery Operated Air Conditioner (Price: ₹999, Rating: 1.0⭐) Beat the heat with these affordable and efficient cooling solutions! \n",
+      " - Stay cool this summer with these portable air conditioners!\n",
+      "1. Trends Alert Mini Air Conditioner Portable Air Mini Cooler Cooling Fan Mini Desktop Mobile Home Portable Air Conditioner (Price: ₹2999, Rating: 1.0⭐)\n",
+      "2. Go Arctic Air Portable 3 in 1 Conditioner Humidifier Purifier Mini Cooler Arctic Air Humidifier Purifier Mini Cooler Air (Price: ₹1899, Rating: 1.0⭐)\n",
+      "3. Haier 1.5 Ton 3 Star Inverter Split Air Conditioner Copper HSU19DW3DCINV White (Price: ₹69500, Rating: 1.0⭐)\n",
+      "4. Derike Portable Mini AC USB Battery Operated Air Conditioner Mini Water Air Cooler Cooling Fan Bladeless Dual Blower with (Price: ₹999, Rating: 1.0⭐)\n",
+      "5. Domact Mini AC USB Battery Operated Air Conditioner Mini Water Air Cooler Cooling Fan Bladeless Dual Blower with Ice Chamber (Price: ₹999, Rating: 1.0⭐) \n",
       "\n",
       "====================================================================================================\n"
      ]
