update testing: change name of model

--- a/notebook/testing.ipynb
+++ b/notebook/testing.ipynb
@@ -61,7 +61,7 @@
     "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
     "BASE_URL = \"https://openrouter.ai/api/v1\"\n",
     "MODEL_NAME = \"all-MiniLM-L6-v2\"\n",
-    "METADATA_PATH = \"../models/embeddings_faiss.pkl\"\n",
+    "METADATA_PATH = \"../models/embeddings.pkl\"\n",
     "INDEX_PATH = \"../models/faiss_index.bin\"\n",
     "\n",
     "# Setup OpenAI client\n",
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "fffbeb66",
    "metadata": {},
    "outputs": [],
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "54017af8",
    "metadata": {},
    "outputs": [
@@ -312,12 +312,11 @@
      "output_type": "stream",
      "text": [
       "📘 Summary:\n",
-      " - Stay cool this summer with these portable air conditioners!\n",
-      "1. Trends Alert Mini Air Conditioner Portable Air Mini Cooler Cooling Fan Mini Desktop Mobile Home Portable Air Conditioner (Price: ₹2999, Rating: 1.0⭐)\n",
-      "2. Go Arctic Air Portable 3 in 1 Conditioner Humidifier Purifier Mini Cooler Arctic Air Humidifier Purifier Mini Cooler Air (Price: ₹1899, Rating: 1.0⭐)\n",
-      "3. Haier 1.5 Ton 3 Star Inverter Split Air Conditioner Copper HSU19DW3DCINV White (Price: ₹69500, Rating: 1.0⭐)\n",
-      "4. Derike Portable Mini AC USB Battery Operated Air Conditioner Mini Water Air Cooler Cooling Fan Bladeless Dual Blower with (Price: ₹999, Rating: 1.0⭐)\n",
-      "5. Domact Mini AC USB Battery Operated Air Conditioner Mini Water Air Cooler Cooling Fan Bladeless Dual Blower with Ice Chamber (Price: ₹999, Rating: 1.0⭐) \n",
+      " - Stay cool this summer with the Trends Alert Mini Air Conditioner Portable Air Cooler for ₹2999 with a 1.0⭐ rating.\n",
+      "- Beat the heat with the Go Arctic Air Portable 3 in 1 Conditioner for ₹1899, rated 1.0⭐.\n",
+      "- Keep your home cool with the Haier 1.5 Ton 3 Star Inverter Split Air Conditioner for ₹69500, rated 1.0⭐.\n",
+      "- Stay refreshed on-the-go with the Derike Portable Mini AC for ₹999, rated 1.0⭐.\n",
+      "- Chill out with the Domact Mini AC for ₹999, rated 1.0⭐. \n",
       "\n",
       "====================================================================================================\n"
      ]
