update training: change comment

--- a/notebook/training.ipynb
+++ b/notebook/training.ipynb
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -365,8 +365,8 @@
         "max_price = df[\"actual_price\"].max()\n",
         "normalized_price = df[\"actual_price\"] / max_price\n",
         "\n",
-        "max_rating = df[\"ratings\"].max()  # Assume ratings are numerical\n",
-        "normalized_rating = df[\"ratings\"] / max_rating  # Scale ratings between 0-1\n",
+        "max_rating = df[\"ratings\"].max() \n",
+        "normalized_rating = df[\"ratings\"] / max_rating \n",
         "\n",
         "# Load pre-trained sentence embedding model\n",
         "model = SentenceTransformer(\"all-MiniLM-L6-v2\")\n",
