update testing: markdown

--- a/notebook/testing.ipynb
+++ b/notebook/testing.ipynb
@@ -138,7 +138,7 @@
    "id": "f879cf86",
    "metadata": {},
    "source": [
-    "### 5. FAISS Search with Price & Rating Embedding"
+    "### 5. FAISS Search"
    ]
   },
   {
